<resources>
    <string name="app_name">Workout</string>
    <string name="workout_detail_title">Название упражнения</string>

    <string name="workout_detail_subtitle_attempts">число подходов</string>
    <string name="workout_detail_subtitle_repeated">число повторов</string>
    <string name="workout_detail_error_repeat">В минус залезть нельзя!</string>

    <string name="workout_detail_subtitle_timer">таймер</string>
    <string name="workout_detail_timer_stop_button">Стоп</string>
    <string name="workout_detail_timer_reset_button">Сброс</string>
    <string name="workout_detail_timer_start_button">Старт</string>

    <string name="workout_detail_subtitle_record">ваш рекорд</string>
    <string name="workout_detail_error_record">Для фиксации рекорда результат должен быть лучше!</string>
    <string name="workout_detail_record_attempts">Подходов:</string>
    <string name="workout_detail_record_repeats">Повторов:</string>
    <string name="workout_detail_record_timer">Затраченное время:</string>
    <string name="workout_detail_record_date">Дата:</string>
    <string name="workout_detail_record_share">Поделиться</string>
    <string name="workput_detail_choose_sender_record">Способ отправки</string>
    <string name="workput_detail_record_message">Я поставил новый рекорд!</string>
    <string name="workput_detail_error_send_message">В системе нет сервисов для отправки сообщений</string>

    <string name="workout_detail_subtitle_description">правила выполнения</string>
    <string name="workout_detail_description">Здесь описание правильного выполнения упражнения.</string>

    <string name="workout_list_title">Выбор упражнения</string>
    <string name="workout_list_is_empty">Список упражнений пуст</string>
    <string name="workout_list_previous_record_area_title">Предыдущий рекорд</string>
    <string name="workout_list_added_favorites">Добавлено в избранное</string>
    <string name="workout_list_deleted">Удалено</string>
    <string name="workout_detail_error_choose_exercise">Упражнение еще не добавлено в приложение.</string>

    <string name="workout_add_exercise_title">Название упражнения</string>
    <string name="workout_add_exercise_url">URL картинки</string>
    <string name="workout_add_exercise_description">Описание</string>
    <string name="workout_add_exercise_button_add">Добавить</string>
    <string name="workout_add_error_exercise">Все поля должны быть заполнены!</string>

    <string name="workout_item_menu_favorites">Избранное</string>
    <string name="workout_item_menu_delete">Удалить</string>
    <string name="workout_list_main_autotimer">Включать секундомер при первом повторении</string>
    <string name="workout_list_main_view_favorites">Отображать только избранное</string>
    <string name="workout_list_main_add_exercise">Добавить упражнение</string>

    <string name="workout_navi_user_name">Имя пользователя</string>
    <string name="nav_about">О разработчике</string>
    <string name="nav_tempandhum">Данные температуры и влажности</string>

    <string name="title_about">О разработчике</string>
    <string name="message_about">Описание разработчика</string>
    <string name="title_sensors_data">Данные встроенных датчиков</string>
    <string name="sensor_hum_not_connected">Датчик влажности не подключен.</string>
    <string name="sensor_temp_not_connected">Датчик температуры не подключен.</string>
    <string name="sensor_temp_value">Температура:</string>
    <string name="sensor_hum_value">Влажность:</string>
    <string name="sensor_temp_unit">°С</string>
    <string name="sensor_hum_unit"> %</string>

    <string name="open_external_web">Открыть внешний web-ресурс</string>
    <string name="weather_city_change_menu">Изменить город</string>
    <string name="weather_city_title">Погода на улице</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="select_city">Выбор населенного пункта</string>
    <string name="change_city">Выбрать</string>
    <string name="define_city">Определить</string>

    <string name="default_city">Yekaterinburg</string>
    <string name="city_not_found">Населенный пункт не найден</string>
    <string name="city_not_determined">Не удалось определить населенный пункт, повторите попытку</string>

    <string name="go_btn">go</string>
    <string name="ext_page_hint_ent_address">Введите адрес</string>
    <string name="no_permission_for_location">Предоставьте права для определения местаположения и повторите попытку</string>
    <string name="city_not_define">Город не выбран</string>
    <string name="error_get_data">Ошибка получения данных!</string>


</resources>
