<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.fragments.WorkoutAddExerciseFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/workout_add_exercise_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/workout_add_exercise_title"/>
        <EditText
            android:id="@+id/workout_add_exercise_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/workout_add_exercise_url"/>
        <EditText
            android:id="@+id/workout_add_exercise_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/workout_add_exercise_description"/>
        <Button
            android:id="@+id/workout_add_exercise_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/workout_add_exercise_button_add"/>

    </LinearLayout>
</ScrollView>