<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:background="@color/colorLightGray"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/workout_detail_subtitle_timer" />

        <TextView
            android:id="@+id/workout_detail_timer_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="60sp"
            android:text="0:00.00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/workout_detail_timer_stop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/workout_detail_timer_stop_button"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/workout_detail_timer_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/workout_detail_timer_reset_button"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/workout_detail_timer_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/workout_detail_timer_start_button"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
