<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.fragments.WorkoutDetailFragment">
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Name of exercise -->
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/workout_detail_title"
            android:textSize="24sp"
            android:layout_margin="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/workout_detail_title"
            android:layout_height="wrap_content" />

        <!-- Image of exercise -->
        <ImageView
            android:id="@+id/workout_detail_picture"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_margin="16sp"
            android:background="@color/colorLightGray" />

    <android.support.v7.widget.CardView
        android:id="@+id/timer_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <!-- Number of attempted exercises -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16sp"
            android:background="@color/colorLightGray"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/workout_detail_subtitle_attempts" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16sp"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/workout_detail_seek_bar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:max="99" />

                <TextView
                    android:id="@+id/workout_detail_attempt_count_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="1"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- Number of repeated exercises -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16sp"
            android:background="@color/colorLightGray"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/workout_detail_subtitle_repeated" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/workout_detail_repeat_dec"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="-"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/workout_detail_repeat_counter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/workout_detail_repeat_inc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="+"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <!-- Record area -->
        <LinearLayout
            android:id="@+id/workout_detail_record_area"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_margin="16sp"
            android:background="@color/colorLightGray"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="@color/colorLightGray"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="264dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:text="@string/workout_detail_subtitle_record"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/workout_detail_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:textSize="8sp"
                    android:textStyle="bold"
                    android:text="@string/workout_detail_record_share" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <!-- Number of attempts -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/workout_detail_record_attempts"/>
                    <TextView
                        android:id="@+id/workout_detail_record_attempt_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginLeft="8dp"
                        android:text="0"/>
                </LinearLayout>

                <!-- Number of repeats -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/workout_detail_record_repeats"/>
                    <TextView
                        android:id="@+id/workout_detail_record_repeat_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginLeft="8dp"
                        android:text="0"/>
                </LinearLayout>

                <!-- Timer -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/workout_detail_record_timer"/>
                    <TextView
                        android:id="@+id/workout_detail_record_timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginLeft="8dp"
                        android:text="0:00:00"/>
                </LinearLayout>

                <!-- Date of training -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/workout_detail_record_date"/>
                    <TextView
                        android:id="@+id/workout_detail_record_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginLeft="8dp"
                        android:text=""/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!-- Rules of exercise -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_margin="16sp"
            android:background="@color/colorLightGray"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/workout_detail_subtitle_description" />
            <TextView
                android:id="@+id/workout_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16sp"
                android:text="@string/workout_detail_description"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>